[gd_scene load_steps=11 format=3 uid="uid://dnla6tqymxf5n"]

[ext_resource type="Script" path="res://shop/shop.gd" id="1_jdlp6"]
[ext_resource type="Theme" uid="uid://my7bgqgi4ecq" path="res://new_theme.tres" id="2_54cn8"]
[ext_resource type="Texture2D" uid="uid://hxwftcm3kfmr" path="res://assets/skill/group_message.png" id="3_4k7p0"]
[ext_resource type="Texture2D" uid="uid://bj5xxisebypy" path="res://assets/skill/auto_reply.png" id="4_hgtx5"]
[ext_resource type="Script" path="res://shop/red_points.gd" id="5_jv8tp"]
[ext_resource type="Texture2D" uid="uid://bctxfcmoy24m8" path="res://assets/store/新建文件夹/menu.png" id="6_cttp1"]
[ext_resource type="Texture2D" uid="uid://cah0h5lv3jxd" path="res://assets/store/新建文件夹/jingxuan.png" id="7_7qftg"]
[ext_resource type="Texture2D" uid="uid://b5b0syfrw6cox" path="res://assets/store/新建文件夹/small.png" id="8_ueg77"]

[sub_resource type="LabelSettings" id="LabelSettings_d4n4i"]
font_size = 25
font_color = Color(0.125911, 0.125911, 0.125911, 1)

[sub_resource type="LabelSettings" id="LabelSettings_rcki3"]
font_size = 30
font_color = Color(0.133196, 0.133196, 0.133196, 1)

[node name="shop" type="Node2D"]
script = ExtResource("1_jdlp6")

[node name="group_reply" type="Button" parent="."]
z_index = 10
offset_left = 432.0
offset_top = 152.0
offset_right = 513.0
offset_bottom = 196.0
theme = ExtResource("2_54cn8")
text = "安装"

[node name="auto_reply" type="Button" parent="."]
z_index = 10
offset_left = 432.0
offset_top = 264.0
offset_right = 512.0
offset_bottom = 308.0
theme = ExtResource("2_54cn8")
text = "安装"

[node name="GroupMessage" type="Sprite2D" parent="."]
position = Vector2(51, 186)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_4k7p0")

[node name="AutoReply" type="Sprite2D" parent="."]
position = Vector2(51, 296)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_hgtx5")

[node name="Label" type="Label" parent="."]
offset_left = 108.0
offset_top = 158.0
offset_right = 483.0
offset_bottom = 193.0
theme = ExtResource("2_54cn8")
text = "群发功能，一次消除多条未读消息"
label_settings = SubResource("LabelSettings_d4n4i")

[node name="Label2" type="Label" parent="."]
offset_left = 108.0
offset_top = 264.0
offset_right = 483.0
offset_bottom = 333.0
theme = ExtResource("2_54cn8")
text = "自动回复，一段时间内
自动消除多条未读消息"
label_settings = SubResource("LabelSettings_d4n4i")

[node name="back" type="Button" parent="."]
offset_left = 2.0
offset_top = 444.0
offset_right = 70.0
offset_bottom = 475.0
theme = ExtResource("2_54cn8")
text = "返回"

[node name="red_points" type="Label" parent="."]
offset_left = 140.0
offset_top = 15.0
offset_right = 390.0
offset_bottom = 84.0
theme = ExtResource("2_54cn8")
text = "小红点数量"
label_settings = SubResource("LabelSettings_rcki3")
script = ExtResource("5_jv8tp")

[node name="Menu" type="Sprite2D" parent="."]
z_index = -100
position = Vector2(271, 462.25)
scale = Vector2(0.478222, 0.409483)
texture = ExtResource("6_cttp1")

[node name="Jingxuan" type="Sprite2D" parent="."]
position = Vector2(281, 21)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_7qftg")

[node name="Small" type="Sprite2D" parent="."]
position = Vector2(151, 20)
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_ueg77")

[connection signal="button_down" from="group_reply" to="." method="_on_group_reply_button_down"]
[connection signal="button_down" from="auto_reply" to="." method="_on_auto_reply_button_down"]
[connection signal="button_down" from="back" to="." method="_on_back_button_down"]
